# data-space-backend

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml  swagger.yaml
.github/workflows/: deploy.yaml
authorization/: admin.py  apps.py  serializers.py  views.py
b2b_connection/: admin.py  apps.py  models.py  serializers.py  views.py
b2b_connection/migrations/: 0001_initial.py  0002_alter_b2bconnection_b2bconnectionrecord.py
config/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
config/migrations/: 0001_initial.py  0002_verificationtemplate.py  0003_datasource_openapiurl.py  0004_auto_20240404_0725.py  0005_auto_20240405_0607.py  0006_datasource_createdat.py  0007_alter_verification_presentationrecord.py
connection/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
connection/migrations/: 0001_initial.py  0002_auto_20240402_0713.py  0003_alter_connection_connectionrecord.py
customadminsite/: admin.py  apps.py
data_disclosure_agreement/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
data_disclosure_agreement/migrations/: 0001_initial.py  0002_auto_20240403_1846.py  0002_auto_20240405_1049.py  0002_auto_20250902_0851.py  0003_datadisclosureagreementtemplate.py  0004_auto_20250915_0917.py  0005_datadisclosureagreementtemplate_datadisclosureagreementtemplaterevision.py  0006_datadisclosureagreementtemplate_datadisclosureagreementtemplaterevisionid.py  0007_datadisclosureagreementtemplate_updatedat.py  0008_add_tags_to_template.py  0009_alter_datadisclosureagreement_datadisclosureagreementrecord_and_more.py
data_disclosure_agreement_record/: admin.py  apps.py  models.py  serializers.py  views.py
data_disclosure_agreement_record/migrations/: 0001_initial.py  0002_alter_datadisclosureagreementrecord_datadisclosureagreementrecord_and_more.py
dataspace_backend/: asgi.py  authentication.py  fields.py  image_utils.py  middleware.py  password_confirm.py  settings.py  urls.py  utils.py  wsgi.py
dataspace_user/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
dataspace_user/migrations/: 0001_initial.py
db/: README.md
discovery/: admin.py  apps.py  views.py
governance/: apps.py  urls.py  views.py
notification/: admin.py  views.py
oAuth2Clients/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
oAuth2Clients/migrations/: 0001_initial.py  0002_auto_20250903_0655.py  0003_auto_20250918_0430.py
onboard/: admin.py  apps.py  managers.py  mfa_utils.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
onboard/migrations/: 0001_initial.py  0002_alter_dataspaceuser_id.py  0003_dataspaceuser_uuid.py  0004_mfacode.py  0005_dataspaceuser_is_mfa_enabled.py
openapi/: Makefile  README.md  bundled.yaml  index.html  index.yaml
openapi/definitions/: Connection.yaml  ConnectionRecord.yaml  ConnectionWebhookEvent.yaml  CreateConnectionResponse.yaml  DataController.yaml  DataDisclosureAgreement.yaml  DataSharingRestriction.yaml  DataUsingService.yaml  InvitationUrl.yaml  Organisation.yaml  OrganisationAdmin.yaml  Pagination.yaml  PersonalData.yaml  PresentProofWebhookEvent.yaml  Proof.yaml  PublishDataDisclosureAgreementWebhookEvent.yaml  Status.yaml  Verification.yaml
openapi/parameters/: dataSourceId.yaml  limit.yaml  offset.yaml  status.yaml  version.yaml
openapi/paths/: configCreateConnection.yaml  configCreateDataSource.yaml  configCreateVerification.yaml  configDeleteConnection.yaml  configDeleteDataDisclosureAgreement.yaml  configListConnection.yaml  configListDataDisclosureAgreement.yaml  configListVerificationTemplate.yaml  configPasswordReset.yaml  configReadAdmin.yaml  configReadDataDisclosureAgreement.yaml  configReadDataSource.yaml  configReadDataSourceCoverImage.yaml  configReadDataSourceLogoImage.yaml  configReadVerification.yaml  configUpdateAdmin.yaml  configUpdateDataDisclosureAgreementStatus.yaml  configUpdateDataSource.yaml  configUpdateDataSourceCoverImage.yaml  configUpdateDataSourceLogoImage.yaml  configUpdateOpenApiUrl.yaml  createVerification.yaml  createWebhookConnection.yaml  createWebhookDataDisclosureAgreement.yaml  createWebhookPresentProof.yaml  listDataDisclosureAgreement.yaml  login.yaml  onboardLogin.yaml  onboardPasswordReset.yaml  onboardRefreshtoken.yaml  onboardRegister.yaml  readAdmin.yaml  readDataSource.yaml  readDataSourceCoverImage.yaml  readDataSourceLogoImage.yaml  readVerification.yaml  refreshtoken.yaml  register.yaml  serviceListDataDisclosureAgreement.yaml  serviceListDataSource.yaml  (+5 more)
organisation/: admin.py  models.py  serializers.py  urls.py  views.py
organisation/migrations/: 0001_initial.py  0002_organisationidentity_organisationidentitytemplate.py  0003_auto_20250916_1301.py  0004_auto_20250926_1308.py  0005_codeofconduct.py  0006_organisation_codeofconduct.py  (+3 more)
service/: admin.py  apps.py  tests.py  urls.py  views.py
software_statement/: admin.py  apps.py  models.py  serializers.py  views.py
webhook/: admin.py  apps.py  security.py  urls.py  views.py
(+15 files in other folders)
