[tool.poetry]
name = "dataspace_backend"
version = "0.1.0"
description = "Proof of Business backend"
authors = ["George J Padayatti <george.padayatti@igrant.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.0.7"
django-auditlog = "1.0.0"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "4.3.0"
django-cors-headers = "3.7.0"
psycopg2-binary = "2.8.6"
PyJWT = "1.7.1"
gunicorn = "^20.1.0"
django-filter = "21.1"
django-rest-auth = "0.9.5"
django-constance = "2.9.1"
django-picklefield = "3.0"
django-jsonfield = "^1.4.1"

[tool.poetry.dev-dependencies]
ruff = "^0.11.0"
ty = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "onboard", "organisation", "service", "data_disclosure_agreement", "data_disclosure_agreement_record", "connection", "webhook", "software_statement", "notification", "b2b_connection", "oAuth2Clients", "discovery", "authorization", "customadminsite", "dataspace_backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# ty doesn't fully support Django's metaclass magic yet
# Disable rules that produce false positives for Django models
[tool.ty.rules]
unresolved-attribute = "ignore"       # Django models have dynamic .objects, .DoesNotExist
unresolved-import = "ignore"          # Some Django imports are dynamic
possibly-missing-attribute = "ignore" # Django field types (JSONField, DateTimeField) are dynamic
